About and Help page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,8 +12,10 @@
     <body>
         <div class="main-content">
             {{>header}}
-        
+           
             <img class="profile" src="/img/babyyoda.jpg" alt="">
+            <p>Baby Yoda says Hi!</p>
+            <p>This site was created by Sneha. It uses mapbox.com and weatherStack api to get the data</p>
         </div>
         {{>footer}}
     </body>
