Adding new items to home page

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -16,9 +16,10 @@
         <form class="weatherForm">
             <input type="text" class="location" placeholder="Location">
             <button type="submit">Search</button>
-        </form>
-        <p class="message" id="msg-1"></p>
+        </form>    
+        <p class="message" id="msg-1"></p>       
         <p class="message" id="msg-2"></p>
+        <img src="" class="weather-image" />
     </div>
     {{>footer}}
     <script src="./js/app.js"></script>
